FEAT: add GET /status for status check to all services
