# api/src/api.yaml
@@ -31,6 +31,20 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/HelloWorldResponseDto"
+  /status:
+    get:
+      tags:
+        - default
+      summary: Get status
+      description: Get status
+      responses:
+        "200":
+          description: OK
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "OK"
   /books:
     post:
       tags:
